# openglVerlet

./: CMakeLists.txt
include/app/: appContext.hpp  application.hpp  backround.hpp  ball.hpp  ballManager.hpp  cellManager.hpp  texture.hpp
include/core/: Shader.h  camera.hpp  random.hpp  renderable.hpp  window.hpp
resources/shaders/: bg.frag  bg.vert  fragment.glsl  vertex.glsl
src/: main.cpp
src/app/: application.cpp  texture.cpp
src/core/: window.cpp
